Fix landing button vertical spacing on mobile

--- a/assets/_less/application.less
+++ b/assets/_less/application.less
@@ -83,5 +83,11 @@ body {
 			font-size: @font-size-base * 2;
 			font-weight: 300;
 		}
+
+		@media (max-width: @screen-xs-max) {
+			.row {
+				margin-bottom: 0;
+			}
+		}
 	}
 }
